manifests/prod/forgejo/EndpointSlice-forgejo.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: forgejo
  name: forgejo
  namespace: forgejo
ports:
  - name: http
    port: 2999
    protocol: TCP
