manifests/prod/forgejo/Endpoints-forgejo.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: forgejo
  namespace: forgejo
subsets:
  - addresses:
      - ip: 100.83.142.17
    ports:
      - name: http
        port: 2999
