manifests/prod/forgejo/Service-forgejo.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 2999
  type: ClusterIP
