manifests/prod/forgejo/Ingress-forgejo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
    gethomepage.dev/description: Git forge, CI & container registry
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: forgejo.svg
    gethomepage.dev/name: forgejo
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: traefik
  rules:
    - host: forgejo.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: forgejo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - forgejo.k3s.lan
      secretName: forgejo-tls
